--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "file_finder"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 click = "^8.1.4"
+tabulate = "^0.9.0"
 
 
 [build-system]
