--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,7 @@ tabulate = "^0.9.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+
+comando = "file_finder.cli:cli"
